<resources>
<!--    App name -->
    <string name="app_name">ReadyForExams</string>

<!--    Landing screen -->
    <string name="landing_login_button_text">Log in</string>
    <string name="landing_header_text_1">Android Mentorship Program</string>
    <string name="landing_illustration_imgage_description_1">Students taking an exam</string>

<!--    Login screen -->
    <string name="login_login_button_text">Log in</string>
    <string name="login_email_edit_text_hint">Email address</string>
    <string name="login_password_edit_text_hint">Password</string>
    <string name="login_button_forgot_password_link_text"><u>Forgot password</u></string>
    <string name="login_unregistered_text">Not registered?</string>
    <string name="login_sign_up_link_text"><u>Sign up</u></string>
    <string name="login_invalid_email_error_text">Please enter a valid email address</string>
    <string name="login_invalid_password_error_text">Your password should be minimum 9 and maximum 20 characters long</string>
    <string name="login_login_failed_error_text">You entered an invalid email address or password</string>
    <string name="login_screen_title">Log in</string>

<!--    Signup screen -->
    <string name="signup_header_text">Sign up</string>
    <string name="signup_email_edit_text_hint">@string/login_email_edit_text_hint</string>
    <string name="signup_password_edit_text_hint">@string/login_password_edit_text_hint</string>
    <string name="signup_login_button_text">Sign up</string>

<!--    Password reset screen -->
    <string name="password_reset_header_text">Reset Your Password</string>
    <string name="password_reset_info_text">Enter your email to reset your password</string>
    <string name="password_reset_button_text">Reset password</string>
    <string name="password_reset_success_text">Your password was successfully reset</string>

<!--    Signup screen -->
    <string name="signup_signup_info_text">To register, enter your email and a strong password</string>
    <string name="signup_registration_failed_error_text">Failed to register a new account using this email address</string>
    <string name="signup_invalid_password_error_text">@string/login_invalid_password_error_text</string>
    <string name="signup_invalid_email_error_text">@string/login_invalid_email_error_text</string>
    <string name="signup_success_text">Congratulations! Your account was successfully registered</string>
    <string name="signup_success_dialog_back_button_text">Back to Log in</string>
    <string name="signup_password_confirm_edit_text_hint">Confirm password</string>

<!--    Home screen -->
    <string name="home_title_text">Home</string>
    <string name="home_fab_description">Add a new checklist button</string>
    <string name="home_sad_smile_icon_description">Sad smile</string>
    <string name="home_empty_task_list_message_text">There are no available tasks for your exams</string>
    <string name="home_checklist_completion_icon_description">Checklist completion icon</string>
    <string name="home_checklist_not_started_text">not started</string>
    <string name="home_checklist_in_progress_text">in progress</string>
    <string name="home_checklist_done_text">done</string>
    <string name="home_checklist_empty_text">empty</string>
    <string name="home_checklist_tasks_count_text">%1$d / %2$d</string>

<!--    Create screen -->
    <string name="create_checklist_name_hint">Enter a title</string>
    <string name="create_create_button_text">Create now</string>
    <string name="create_item_name_hint">Enter an item</string>
    <string name="create_add_item_button_description">Add item button</string>
    <string name="create_title_text">Create</string>
    <string name="create_checklist_created_text">You have successfully created a new checklist</string>

<!--    Save changes dialog -->
    <string name="save_changes_dialog_title">Unsaved changes</string>
    <string name="save_changes_dialog_message">Any unsaved changes will be discarded. Do you want to save them?</string>
    <string name="save_changes_dialog_positive">Yes</string>
    <string name="save_changes_dialog_nagative">No</string>
    <string name="save_changes_dialog_neutral">Cancel</string>
</resources>
