<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_med"
    tools:context=".presentation.home.HomeFragment">

    <ImageView
        android:id="@+id/home_sad_smile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_xlarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@drawable/ic_sad_smile_64"
        android:contentDescription="@string/home_sad_smile_icon_description"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/home_empty_task_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_empty_task_list_message_text"
        android:padding="@dimen/padding_large"
        style="@style/HeaderText"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_sad_smile_icon"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_checklist_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/home_checklist_item"
        tools:itemCount="8"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:contentDescription="@string/home_fab_description"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/blue"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>