<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/password_reset_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.passwordreset.PasswordResetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_reset_email_text_input_layout"
        style="@style/TextInputLayoutLogin"
        app:layout_constraintBottom_toTopOf="@id/password_reset_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_base">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_reset_email_edit_text"
            style="@style/EditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_edit_text_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/HeaderText"
        app:layout_constraintBottom_toTopOf="@id/password_reset_email_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/password_reset_info_text"
        android:textSize="@dimen/text_large" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/password_reset_signup_button"
        style="@style/ButtonPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:text="@string/password_reset_button_text" />

    <ProgressBar
        android:id="@+id/password_reset_progress_bar"
        style="android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        app:layout_constraintBottom_toTopOf="@id/password_reset_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_reset_email_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>